--- a/common/common.html
+++ b/common/common.html
@@ -1,20 +1,26 @@
 <div class="common">
     <div id="head" class="head">
         
-        <link class="base" rel="stylesheet" type="text/css" href="/css/web/base.css">
-        <link class="ui" rel="stylesheet" type="text/css" href="/css/web/frame.css">
-        <link rel="stylesheet" type="text/css" href="/css/web/cell.css">
-        <link rel="stylesheet" type="text/css" href="/css/web/button.css">
-        <link rel="stylesheet" type="text/css" href="/css/web/barHeader.css">
-        <link rel="stylesheet" type="text/css" href="/css/web/input.css">
+        <link class="base" rel="stylesheet" type="text/css" href="/css/base.css">
+        <link class="ui" rel="stylesheet" type="text/css" href="/css/frame.css">
+        <link rel="stylesheet" type="text/css" href="/css/cell.css">
+        <link rel="stylesheet" type="text/css" href="/css/button.css">
+        <link rel="stylesheet" type="text/css" href="/css/barHeader.css">
+        <link rel="stylesheet" type="text/css" href="/css/input.css">
         <link rel="stylesheet" type="text/css" href="/css/mobile.css">
-        <link rel="stylesheet" type="text/css" href="/css/web/slider.css">
-        <link rel="stylesheet" type="text/css" href="/css/web/content.css">
+        <link rel="stylesheet" type="text/css" href="/css/slider.css">
+        <link rel="stylesheet" type="text/css" href="/css/content.css">
+        <link rel="stylesheet" type="text/css" href="/css/topbar.css">
+        <link rel="stylesheet" type="text/css" href="/css/navbar.css">
         <link rel="stylesheet" type="text/css" href="/css/index.css">
         <link rel="stylesheet" type="text/css" href="/css/modalBox.css">
-        <link rel="stylesheet" type="text/css" href="/css/web/sideBar.css">
+        <link rel="stylesheet" type="text/css" href="/css/sideBar.css">
         <link rel="stylesheet" type="text/css" href="/css/special.css">
         <link rel="stylesheet" type="text/css" href="/css/touch.css">
+        <link rel="stylesheet" type="text/css" href="/css/iconfont.css">
+        <link rel="stylesheet" type="text/css" href="/css/sprite.css">
+
+
         <script type="text/javascript" src="/js/index.js"></script>
         
 
