--- a/common/common.html
+++ b/common/common.html
@@ -10,6 +10,9 @@
         <link rel="stylesheet" type="text/css" href="/css/mobile.css">
         <link rel="stylesheet" type="text/css" href="/css/slider.css">
         <link rel="stylesheet" type="text/css" href="/css/content.css">
+        <link rel="stylesheet" type="text/css" href="/css/list.css">
+        <link rel="stylesheet" type="text/css" href="/css/tab.css">
+        <link rel="stylesheet" type="text/css" href="/css/iconGroup.css">
         <link rel="stylesheet" type="text/css" href="/css/topbar.css">
         <link rel="stylesheet" type="text/css" href="/css/navbar.css">
         <link rel="stylesheet" type="text/css" href="/css/index.css">
