--- a/list/list.html
+++ b/list/list.html
@@ -31,8 +31,11 @@
 				</div>
 			</div>
 		</div>
-	</div>	
+	</div>
 	<div id="listBox" class="" ><!-- data-set="set" -->
+		<div class="box" data-title="list03">
+
+		</div>
 		<div class="box" data-title="list02">
 			<div class="list02 text-color">
 				<ul>
