--- a/tab/tab.html
+++ b/tab/tab.html
@@ -33,6 +33,29 @@
 		</div>
 	</div>	
 	<div id="tabBox" class="" ><!-- data-set="set" -->
+		<div class="box" data-block="1" data-plugin="superslide" data-p-caseName="tab06">
+			<div class="tab06" data-type="tab">
+				<div class="hd">
+					<ul>
+						<li><div class="inner"><i class="iconfont">&#xe60d;</i> 关于微店管家</div></li>
+						<li><div class="inner"><i class="iconfont">&#xe60a;</i>荣誉奖项</div></li>
+						<li><div class="inner"><i class="iconfont">&#xe66a;</i>发展历程</div></li>
+						<li><div class="inner"><i class="iconfont">&#xe660;</i>联系我们</div></li>
+					</ul>
+				</div>
+				<div class="">
+					<ul class="bd">
+						<!-- tab1 start -->
+						<li>1</li><li>2</li>
+					</ul>
+				</div>
+			</div>
+			<script>
+				function tab06() {
+                    jQuery(".tab06").slide();
+                }
+			</script>
+		</div>
 		<div class="box" data-block="3">
 			<!--新闻tab切换 start-->
 			<div id="tab05" class="slideTxtBox tab05 case02" data-title="tab05"
