--- a/common/common.html
+++ b/common/common.html
@@ -3,9 +3,14 @@
         
         <link class="base" rel="stylesheet" type="text/css" href="/css/base.css">
         <link class="ui" rel="stylesheet" type="text/css" href="/css/frame.css">
+        <link rel="stylesheet" type="text/css" href="/css/animate.css">
+        <link rel="stylesheet" type="text/css" href="/css/keyframe.css">
+
         <link rel="stylesheet" type="text/css" href="/css/cell.css">
+        <link rel="stylesheet" type="text/css" href="/css/affix.css">
         <link rel="stylesheet" type="text/css" href="/css/button.css">
         <link rel="stylesheet" type="text/css" href="/css/barHeader.css">
+        <link rel="stylesheet" type="text/css" href="/css/header.css">
         <link rel="stylesheet" type="text/css" href="/css/input.css">
         <link rel="stylesheet" type="text/css" href="/css/mobile.css">
         <link rel="stylesheet" type="text/css" href="/css/slider.css">
@@ -20,7 +25,7 @@
         <link rel="stylesheet" type="text/css" href="/css/sideBar.css">
         <link rel="stylesheet" type="text/css" href="/css/special.css">
         <link rel="stylesheet" type="text/css" href="/css/touch.css">
-        <link rel="stylesheet" type="text/css" href="/css/iconfont.css">
+        <link rel="stylesheet" type="text/css" href="http://at.alicdn.com/t/font_m9dyhh31r184zpvi.css">
         <link rel="stylesheet" type="text/css" href="/css/sprite.css">
 
 
