--- a/common/common.html
+++ b/common/common.html
@@ -16,6 +16,7 @@
         <link rel="stylesheet" type="text/css" href="/css/slider.css">
         <link rel="stylesheet" type="text/css" href="/css/content.css">
         <link rel="stylesheet" type="text/css" href="/css/list.css">
+        <link rel="stylesheet" type="text/css" href="/css/picText.css">
         <link rel="stylesheet" type="text/css" href="/css/tab.css">
         <link rel="stylesheet" type="text/css" href="/css/iconGroup.css">
         <link rel="stylesheet" type="text/css" href="/css/topbar.css">
@@ -25,7 +26,8 @@
         <link rel="stylesheet" type="text/css" href="/css/sideBar.css">
         <link rel="stylesheet" type="text/css" href="/css/special.css">
         <link rel="stylesheet" type="text/css" href="/css/touch.css">
-        <link rel="stylesheet" type="text/css" href="http://at.alicdn.com/t/font_m9dyhh31r184zpvi.css">
+        <link rel="stylesheet" type="text/css" href="/css/pagination.css">
+        <link rel="stylesheet" type="text/css" href="http://at.alicdn.com/t/font_p7sefvbwqaor.css">
         <link rel="stylesheet" type="text/css" href="/css/sprite.css">
 
 
