--- a/content/content.html
+++ b/content/content.html
@@ -13,7 +13,7 @@
     var c = function(){
                 $(function(){
                   $("#contentBox").set({
-                    brandName:"content & List",
+                    brandName:"content",
                     rowBlock:3
                   });
                 });
@@ -33,9 +33,18 @@
 	</div>	
 	
 	<div id="contentBox" class="container1200">
-    <div class="box" data-type="share">
-        <div></div>
-    </div>
+
+        <div class="box" data-title="content1">
+            <div class="content1 ">
+                <p class="p">03-15   公司荣获福建省科技型企业认证</p>
+                <div class="text">
+                    微店管家凭借雄厚的技术研发实力与傲视同行的产品竞争力，在短短两年内，实现业绩与口碑的大突破
+                </div>
+            </div>
+        </div>
+        <div class="box" data-type="share">
+            <div></div>
+        </div>
     <div class="box" data-block="1" data-type="content">
           <ul class="news-ul03">
             <li class="newsRow over-flow ">
@@ -161,20 +170,7 @@
             </ul>
         </div>
     </div>
-    <div class="box" data-block="1">
-          <div class="pagination02" data-type="pagination">
-                <ul>
-                    <li class="left"><a>上一页</a></li>
-                    <li class=""><a>1</a></li>
-                    <li class=""><a>2</a></li>
-                    <li class="on"><a>3</a></li>
-                    <li class=""><a>4</a></li>
-                    <li class=""><a>5</a></li>
-                    <li class="right"><a>下一页</a></li>
 
-                </ul>
-          </div>
-    </div>
     <div class="box" data-block="2">
           <div class="news-list04">
                 <ul>
@@ -456,28 +452,7 @@
            <p class="email">linjiyi@163.com</p>
       </div>  
     </div>
-    <div class="box" data-block="1">
-      <div class="pagination01" data-type="pagination">
-              <ul>
-                  <li class="left"></li>
-                  <li class="">1</li>
-                  <li class="">2</li>
-                  <li class="on">3</li>
-                  <li class="">4</li>
-                  <li class="p_ellipsis">...</li>
-                  <li class="">5</li>
-                  <li class="right"></li>
 
-              </ul>
-      </div>
-       <script type="text/javascript">
-          $(".pagination01 li:not(.right,.left,.on,.p_ellipsis)").hover(function(){
-              $(this).addClass("on")
-           },function(){
-              $(this).removeClass("on")
-           })
-       </script> 
-    </div>
     <div class="box" data-block="2" data-type="content">
 			<ul class="news-ul01">
                 
