--- a/input/input.html
+++ b/input/input.html
@@ -33,6 +33,15 @@
             </div>
         </div>
         <div id="inputBox" class="container1200">
+            <div class="box " data-type="inputset" data-block="3" data-des="input-set06">
+                <form class="float-r clear">
+                    <div class="input-set06 ">
+                        <input class="input " type="" name="" placeholder="请输入关键字">
+                        <input class="button white" type="submit" value="">
+                    </div>
+                </form>
+            </div>
+
             <div class="box" data-type="form" data-block="1" data-plugin="jQuery.validator"  data-p-casename="validator02">
                 <div class="form-content01">
                     <form id="myform02" name="myform02">
