--- a/header/header.html
+++ b/header/header.html
@@ -31,6 +31,15 @@
     </div>
 </div>
 <div id="headerBox" class="" ><!-- data-set="set" -->
+    <div class="box" data-title="header06" >
+        <div class="header06 color">
+            <div class="title">
+                <i class="iconfont">&#xe611;</i>
+                <span class="text">2017</span>
+            </div>
+        </div>
+    </div>
+
     <div class="box" data-title="header05" >
         <div class="header05">
             <div class="header05-left">
