--- a/common/common.html
+++ b/common/common.html
@@ -27,7 +27,7 @@
         <link rel="stylesheet" type="text/css" href="/css/special.css">
         <link rel="stylesheet" type="text/css" href="/css/touch.css">
         <link rel="stylesheet" type="text/css" href="/css/pagination.css">
-        <link rel="stylesheet" type="text/css" href="http://at.alicdn.com/t/font_p7sefvbwqaor.css">
+        <link rel="stylesheet" type="text/css" href="http://at.alicdn.com/t/font_jd64824bh5nx9a4i.css">
         <link rel="stylesheet" type="text/css" href="/css/sprite.css">
 
 
