--- a/header/header.html
+++ b/header/header.html
@@ -31,6 +31,18 @@
     </div>
 </div>
 <div id="headerBox" class="" ><!-- data-set="set" -->
+    <div class="box" data-title="header07" >
+        <div class="header07">
+            <div class="more float-r">
+                <a>更多+</a>
+            </div>
+            <div class="h-title01">
+                <i class="fa fa-comment" aria-hidden="true"></i>
+                通知公告
+            </div>
+
+        </div>
+    </div>
     <div class="box" data-title="header06" >
         <div class="header06 color">
             <div class="title">
