--- a/iconGroup/iconGroup.html
+++ b/iconGroup/iconGroup.html
@@ -33,6 +33,25 @@
 		</div>
 	</div>	
 	<div id="iconGroupBox" class="" ><!-- data-set="set" -->
+		<div class="box" data-block="3" data-title="iconGroup03" data-type="iconGroup">
+			<div class="row-3-block float-r">
+				<ul class="btnGroup1">
+				<li class="button" style="background:#33aad4">
+					<a><img src="/img/icon07.png">投资环境</a>
+				</li>
+				<li class="button" style="background:#2fa689">
+					<a><img src="/img/icon08.png">投资流程</a>
+				</li>
+				<li class="button" style="background:#008e40">
+					<a><img src="/img/icon09.png">优惠政策</a>
+				</li>
+				<li class="button" style="background:#2f9ca6">
+					<a><img src="/img/icon10.png">投资咨询</a>
+				</li>
+			</ul>
+			</div>
+		</div>
+
 		<div class="box" data-block="1" data-title="iconGroup02" data-type="iconGroup">
 			<div class="pWrapper01">
 				<div class="prow01">
