--- a/picText/picText.html
+++ b/picText/picText.html
@@ -33,6 +33,59 @@
     </div>
 </div>
 <div id="picTextBox" class="" ><!-- data-set="set" -->
+    <div class="box" data-block="1" data-title="picText2" data-type="picText" data-plugin="superslide" data-p-casename="picText2">
+        <div class="picText2 riBlock">
+        <div class="picText2-left">
+            <div class="slideBox06 newsBox n-pic">
+                <div class="hd">
+                    <ul>
+                        <li><a></a></li>
+                        <li><a></a></li>
+                        <li><a></a></li>
+                    </ul>
+                </div>
+                <div class="bd">
+                    <ul>
+                        <li>
+                            <a href="#" target="_blank">
+                                <img src="/img/n-pic.png">
+                                <div class="slideTitle">
+                                    <div class="link">武夷山：抓市政设施建设 美化城市环境</div>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" target="_blank">
+                                <img src="/img/n-pic.png">
+                                <div class="slideTitle"><div class="link">武夷山：抓市政设施建设 美化城市环境</div></div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" target="_blank">
+                                <img src="/img/n-pic.png">
+                                <div class="slideTitle"><div class="link">武夷山：抓市政设施建设 美化城市环境</div></div>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <script>
+                function picText2() {
+                    jQuery(".slideBox06").slide({
+                        mainCell: ".bd ul", autoPlay: true, effect: "leftLoop", easing: "swing", interTime: "3500"
+                    });
+
+                }
+            </script>
+        </div>
+        <div class="picText2-right">
+            <div class="picText2-title">坚定不移加快武夷新区建设</div>
+            <div class="picText2-text">
+                本报讯 5日至6日，市委书记庄稼汉深入武夷新区调研时强调:“坚持目标不变、思路不变、力度不变，坚定不移地加快新区建设步伐。冒着绵绵春雨，庄稼汉首先来到武夷新区南林核心区，察看了万达城市综合体、南林大桥、森林公园、新区四所学校、水之廊、水之门等项目；之后，来到将口和兴田片区，实地察看了合福高铁武夷山东站、客运枢纽、智慧旅游集散中心、站西大桥、水之廊、水之门学……<span class="more1">【详细】</span>
+            </div>
+        </div>
+    </div>
+    </div>
     <div class="box" data-block="1" data-title="picText1" data-type="picText">
         <ul class="picText1 tab2ul">
             <li class="newsRow over-flow">
