--- a/tab/tab.html
+++ b/tab/tab.html
@@ -33,6 +33,312 @@
 		</div>
 	</div>	
 	<div id="tabBox" class="" ><!-- data-set="set" -->
+
+		<div class="box " data-block="1" data-plugin="superslide" data-p-caseName="tab09" data-type="tab" data-title="tab09">
+			<div id="tab09" class="slideTxtBox textTab01 riBlock marginBottom" >
+				<div class="hd">
+
+					<ul>
+						<li >
+							<div class="hdInner">行业动态</div>
+						</li>
+						<li >
+							<div class="hdInner">重大项目</div>
+						</li>
+					</ul>
+
+				</div>
+				<div class="bd">
+					<div class="switch">
+						<div class="product_gallary">
+
+							<div class="direction">
+								<div class="sprev directionBtn"><i class="iconfont icon-back-o" aria-hidden="true"></i></div>
+								<div class="snext directionBtn"><i class="iconfont icon-forward-o" aria-hidden="true"></i></div>
+							</div>
+							<div class="gallary">
+								<div class="bd row">
+									<ul>
+										<li class="row-block">
+											<div class="inner">
+												<div class="gInner">
+													<img src="img/slider01.png">
+													<div class="text">图说新区</div>
+												</div>
+											</div>
+										</li>
+										<li class="row-block">
+											<div class="inner">
+												<div class="gInner">
+													<img src="img/slider01.png">
+													<div class="text">图说新区</div>
+												</div>
+											</div>
+										</li>
+										<li class="row-block">
+											<div class="inner">
+												<div class="gInner">
+													<img src="img/slider01.png">
+													<div class="text">图说新区</div>
+												</div>
+											</div>
+										</li>
+										<li class="row-block">
+											<div class="inner">
+												<div class="gInner">
+													<img src="img/slider01.png">
+													<div class="text">图说新区</div>
+												</div>
+											</div>
+										</li>
+										<li class="row-block">
+											<div class="inner">
+												<div class="gInner">
+													<img src="img/slider01.png">
+													<div class="text">图说新区</div>
+												</div>
+											</div>
+										</li>
+										<li class="row-block">
+											<div class="inner">
+												<div class="gInner">
+													<img src="img/slider01.png">
+													<div class="text">图说新区</div>
+												</div>
+											</div>
+										</li>
+
+									</ul>
+								</div>
+
+							</div>
+						</div>
+
+					</div>
+					<div class="switch">
+						<div class="product_gallary">
+
+							<div class="direction">
+								<div class="sprev directionBtn"><i class="fa fa-angle-left" aria-hidden="true"></i></div>
+								<div class="snext directionBtn"><i class="fa fa-angle-right" aria-hidden="true"></i></div>
+							</div>
+							<div class="gallary">
+								<div class="bd row">
+									<ul>
+										<li class="row-block">
+											<div class="inner">
+												<div class="gInner">
+													<img src="img/slider01.png">
+													<div class="text">图说新区</div>
+												</div>
+											</div>
+										</li>
+										<li class="row-block">
+											<div class="inner">
+												<div class="gInner">
+													<img src="img/slider01.png">
+													<div class="text">图说新区</div>
+												</div>
+											</div>
+										</li>
+										<li class="row-block">
+											<div class="inner">
+												<div class="gInner">
+													<img src="img/slider01.png">
+													<div class="text">图说新区</div>
+												</div>
+											</div>
+										</li>
+										<li class="row-block">
+											<div class="inner">
+												<div class="gInner">
+													<img src="img/slider01.png">
+													<div class="text">图说新区</div>
+												</div>
+											</div>
+										</li>
+										<li class="row-block">
+											<div class="inner">
+												<div class="gInner">
+													<img src="img/slider01.png">
+													<div class="text">图说新区</div>
+												</div>
+											</div>
+										</li>
+										<li class="row-block">
+											<div class="inner">
+												<div class="gInner">
+													<img src="img/slider01.png">
+													<div class="text">图说新区</div>
+												</div>
+											</div>
+										</li>
+
+									</ul>
+								</div>
+
+							</div>
+						</div>
+
+					</div>
+
+				</div>
+			</div>
+			<script type="text/javascript">
+
+                function tab09() {
+                    jQuery("#tab09 .product_gallary").slide({mainCell:".gallary ul",prevCell:".sprev",nextCell:".snext",vis:5,effect:"leftLoop"});
+                }
+
+			</script>
+		</div>
+
+		<div class="box " data-block="2" data-type="tab" data-title="tab08">
+			<div class="ul_tab01" >
+				<!-- r-row start -->
+				<div class="r-row">
+					<!-- header03 start -->
+					<div class="tagRow02 clear">
+
+						<span class="textTag01 bg-green float-l white">果蔬及其制品</span>
+						<div class="more float-r"><a class="green">查看详情</a> </div>
+
+
+						<div class="hbtnBox margin-l-240">
+							<span class="button hbtn h-title02btn1 on">检测方案</span>
+							<span class="button hbtn h-title02btn2">背景介绍</span>
+						</div>
+
+					</div>
+					<!-- header03 end -->
+					<div class="r-text clear">
+						<div class="r-inner">
+							<div class="pic float-l">
+								<img src="/img/n-pic.png">
+							</div>
+							<div class="text-wrapper margin-l-240">
+								<div class="text-body " style="display: none;">
+									<ul>
+										<li class="r-item"><a>果蔬放射性残留检测</a></li>
+										<li class="r-item"><a>菌类罐头卫生检验</a></li>
+										<li class="r-item"><a>果蔬罐头检测项目</a></li>
+										<li class="r-item"><a>食用菌卫生检验</a></li>
+										<li class="r-item"><a>蔬菜水果卫生检验检疫</a></li>
+										<li class="r-item"><a>酱腌菜卫生检验</a></li>
+
+									</ul>
+								</div>
+								<div class="text-body hide" style="display: block;">
+									果蔬及其制品现已是人们生活的必需品，在改善饮食结构、丰富饮食文化、提高饮食水平、促进身心健康等方面都起到一定作用，其安全卫生状况关系重大。企业原料的采购、运输、贮存、生产质量控制等，成为产品质量的关键。ZHTC为果蔬及其制品企业提供整体检测方案，提高产品品质与安全，让您的产品更具竞争力。
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- r-row end -->
+				<!-- r-row start -->
+				<div class="r-row">
+					<!-- header03 start -->
+					<div class="tagRow02 clear">
+
+						<span class="textTag01 bg-green float-l white">果蔬及其制品</span>
+						<div class="more float-r"><a class="green">查看详情</a> </div>
+
+
+						<div class="hbtnBox margin-l-240">
+							<span class="button hbtn h-title02btn1 on">检测方案</span>
+							<span class="button hbtn h-title02btn2">背景介绍</span>
+						</div>
+
+					</div>
+					<!-- header03 end -->
+					<div class="r-text clear">
+						<div class="r-inner">
+							<div class="pic float-l">
+								<img src="/img/n-pic.png">
+							</div>
+							<div class="text-wrapper margin-l-240">
+								<div class="text-body " style="display: none;">
+									<ul>
+										<li class="r-item"><a>果蔬放射性残留检测</a></li>
+										<li class="r-item"><a>菌类罐头卫生检验</a></li>
+										<li class="r-item"><a>果蔬罐头检测项目</a></li>
+										<li class="r-item"><a>食用菌卫生检验</a></li>
+										<li class="r-item"><a>蔬菜水果卫生检验检疫</a></li>
+										<li class="r-item"><a>酱腌菜卫生检验</a></li>
+
+									</ul>
+								</div>
+								<div class="text-body hide" style="display: block;">
+									果蔬及其制品现已是人们生活的必需品，在改善饮食结构、丰富饮食文化、提高饮食水平、促进身心健康等方面都起到一定作用，其安全卫生状况关系重大。企业原料的采购、运输、贮存、生产质量控制等，成为产品质量的关键。ZHTC为果蔬及其制品企业提供整体检测方案，提高产品品质与安全，让您的产品更具竞争力。
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- r-row end -->
+
+
+			</div>
+			<script type="text/javascript">
+				/*产品检测方案及背景介绍切换*/
+                $(".ul_tab01 .hbtnBox .hbtn").hover(function(){
+                    var on = $(this).hasClass('on');
+                    if(on){return}else{
+                        $(this).addClass('on').siblings('.hbtn').removeClass('on');
+
+                        var textBody = $(this).parents(".r-row").find(".text-body");
+                        textBody.toggle();
+                    }
+                })
+			</script>
+
+		</div>
+
+		<div class="box" data-block="2" data-plugin="superslide" data-p-caseName="tab07" data-des="切换more链接">
+			<div class="slideTxtBox tab07 riBlock" >
+				<div class="hd">
+					<ul>
+						<li data-link="1">
+							<div class="hdInner">行业动态</div></li>
+						<li data-link="2">
+							<div class="hdInner">活动信息
+							</div>
+						</li>
+					</ul>
+					<div class="more float-r"><a>更多+</a></div>
+				</div>
+				<div class="bd ">
+					<div class="switch">
+						<div class="list01">
+							<ul>
+								<li><a><span class="date">【2017-09-04】</span><span class="text">2014年度上海市服务贸易发展专项资金申 </span>  </a></li>
+								<li><a><span class="date">【2017-09-04】</span><span class="text">2014年度上海市服务贸易发展专项资金申 </span>  </a></li>
+								<li><a><span class="date">【2017-09-04】</span><span class="text">2014年度上海市服务贸易发展专项资金申 </span>  </a></li>
+								<li><a><span class="date">【2017-09-04】</span><span class="text">2014年度上海市服务贸易发展专项资金申 </span>  </a></li>
+							</ul>
+						</div>
+					</div>
+					<div class="switch">
+
+
+					</div>
+				</div>
+			</div>
+			<script>
+                function tab07() {
+                    jQuery(".tab07").each(function(i,e){
+                        $(e).slide({
+                            startFun:function(i,c){
+                                var link = $(e).find(".hd li").eq(i).attr("data-link");
+                                var a = $(e).find(".more a").attr("href",link)
+                            }
+                        });
+                    })
+                }
+			</script>
+		</div>
+
 		<div class="box" data-block="1" data-plugin="superslide" data-p-caseName="tab06">
 			<div class="tab06" data-type="tab">
 				<div class="hd">
@@ -56,10 +362,9 @@
                 }
 			</script>
 		</div>
-		<div class="box" data-block="3">
+		<div class="box" data-block="3" data-title="tab05" data-plugin="superslide" data-p-casename="tab05" data-type="tab">
 			<!--新闻tab切换 start-->
-			<div id="tab05" class="slideTxtBox tab05 case02" data-title="tab05"
-				 data-plugin="superslide" data-p-casename="tab05" data-type="tab">
+			<div class="slideTxtBox tab05 case02" >
 				<div class="hd">
 
 					<ul><li>新闻专题</li><li>行业观察</li></ul>
@@ -93,7 +398,7 @@
 			<!--新闻tab切换 end-->
 			<script type="text/javascript">
                 function tab05(){ //news tab切换
-                    jQuery("#tab05").slide(); }
+                    jQuery(".tab05").slide(); }
 			</script>
 		</div>
 
